# bitlink

./: .gitignore  CMakeLists.txt  README.md
scripts/: build.sh  clean.sh  run.sh
src/: AmigaStyle.cpp  AmigaStyle.h  CrunchEngine.cpp  CrunchEngine.h  CyclicStretch.cpp  CyclicStretch.h  IFF8SVXExport.cpp  IFF8SVXExport.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  PresetFormat.cpp  PresetFormat.h  SampleTools.cpp  SampleTools.h  VampireSlicer.cpp  VampireSlicer.h  WAVExport.cpp  WAVExport.h
